# System-Design

./: README.md
ID Generator Design/: .gitignore  README.md  pyproject.toml
ID Generator Design/docs/: 01-first-principles.md  02-design-approaches.md  03-implementation-steps.md
ID Generator Design/id_generator/: __init__.py  exceptions.py  snowflake.py
ID Generator Design/tests/: test_snowflake.py
Ratelimiter Design/: README.md  pyproject.toml
Ratelimiter Design/docs/: 01-first-principles.md  03-implementation-steps.md
Ratelimiter Design/rate_limiter/: base.py  exceptions.py  sliding_window.py  token_bucket.py
Ratelimiter Design/tests/: test_token_bucket.py
docs/: 02-algorithms-overview.md
rate_limiter/: __init__.py  fixed_window.py
tests/: test_fixed_window.py  test_sliding_window.py
