[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "id-generator"
version = "0.1.0"
description = "Snowflake-style 64-bit unique ID generator with first-principles documentation."
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["id_generator*"]
