[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rate-limiter"
version = "0.1.0"
description = "In-memory rate limiters (fixed window, sliding window, token bucket) with first-principles documentation."
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["rate_limiter*"]
